[package]
name = "cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.3"
syn = "2.0.55"
anstyle-parse = "0.2.3"
uuid = "1.8.0"
http = "1.1.0"
nom = "7.1.3"
byteorder = "1.5.0"
flate2 = "1.0.28"
parking_lot = "0.12.1"
futures-util = "0.3.30"
env_logger = "0.11.3"
tempfile = "3.10.1"
walkdir = "2.5.0"
crossbeam-channel = "0.5.12"
dirs = "5.0.1"
digest = "0.10.7"
toml_edit = "0.22.9"
pretty_assertions = "1.4.0"
num-integer = "0.1.46"
memoffset = "0.9.1"
windows-sys = "0.52.0"

[dev-dependencies]
anyhow = "1.0.81"
regex = "1.10.4"
